# nextpilot-flight-control

./: .clang-format  .clang-format-ignore  .clang-tidy  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  CNAME  Kconfig  LICENSE  README.md  README_zh.md  SConscript  SConstruct  SUMMARY.html  baidu_verify_codeva-cKOoSx0uLv.html  index.html  mkdocs.yml  nextpilot-flight-control.code-workspace  parameters.hpp  sitemap.xml
.github/: CODE_OF_CONDUCT.md
about/: events.html  history.html  index.html  roadmap.html
aboutus/: contact.html  events.html  history.html  index.html
apps/: Kconfig  README.md  SConscript  custom_flight_mode.h  navigation.h  nextpilot.cpp  nextpilot.h  px4_custom_mode.h
bsps/: README.md
community/: code-of-conduct.html  contribute.html  index.html  license.html  support.html
develop/: index.html
discovery/: index.html  usercase.html
docs/: .nav.yml  CNAME  README.md  SUMMARY.md  index.en.md  index.md  requirements.txt
en/: SUMMARY.html  index.html
manual/: index.html
msgs/: README.md  SConscript
overrides/: main.html
pkgs/: Kconfig  README.md  SConscript
rtos/: Kconfig  (+1 more)
tools/building/rtt/: pyproject.toml  setup.py
tools/building/rtt/env/: __init__.py  helper.py  main.py  rtconfig.h  setting.py  setting_old.py
tools/building/rtt/env/pkgs/: main.py
tools/building/rtt/src/: __init__.py  __main__.py  main.py
tools/building/rtt/src/pkgs/: cmd_package_update.py  command.py  package.py  pkgs.py  repo.py
tools/building/rtt/src/utils/: KTemplate.py  archive.py  filediff.py  mk_rtconfig.py  pkgsdb.py  settings.py
(+4865 files in other folders)
