[tool.poetry]
name = "env"
version = "0.1.2"
description = "Command line tool to assist RT-Thread development"
authors = ["latercomer <latercomer@qq.com>"]
readme = "README.md"

[tool.poetry.scripts]
rtt = "env.main:rtt"

[tool.poetry.dependencies]
python = "^3.7"
typer = "^0.4.1"
requests = "^2.27.1"
kconfiglib = "^14.1.0"
SCons = "^4.3.0"
click-spinner = "^0.1.10"

[[tool.poetry.source]]
name = "tsinghua-source"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true                                    # 仅从定义仓库获取

[[tool.poetry.source]]
name = "aliyun-source"
url = " http://mirrors.aliyun.com/pypi/simple/"
default = true                                  # 仅从定义仓库获取

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
